build Tabelle angepasst

--- a/_list.html
+++ b/_list.html
@@ -40,8 +40,10 @@
     <table data-ilist="lidoc/sites">
         <thead>
             <tr>
-                <th data-col="path">Path</th>             
-                <th data-col="name">Name</th>             
+                <th data-col="path">Path</th>
+                <th data-col="name">Name</th>
+                <th data-col="title">Title</th>
+                <th data-col="date">Date</th>
             </tr>
         </thead>
         <tbody></tbody>
