infolist sortierung ausgebessert, side Liste erweitert

--- a/_list.html
+++ b/_list.html
@@ -37,13 +37,15 @@
 
 <body>
     <f-row color-p><p>Sites</p></f-row>
-    <table data-ilist="lidoc/sites">
+    <table data-ilist="lidoc/sites" data-sort="path,date,title">
         <thead>
             <tr>
                 <th data-col="path">Path</th>
                 <th data-col="name">Name</th>
                 <th data-col="title">Title</th>
                 <th data-col="date">Date</th>
+                <th data-col="imageerror">Image Errors</th>
+                <th data-col="linkerror">Link Errors</th>
             </tr>
         </thead>
         <tbody></tbody>
