Tabellen Navigation eingebaut

--- a/_list.html
+++ b/_list.html
@@ -37,9 +37,10 @@
 
 <body>
     <f-row color-p><p>Sites</p></f-row>
-    <table data-ilist="lidoc/sites" data-sort="path,date,title">
+    <table id="lidoc_sites" data-ilist="lidoc/sites" data-sort="path,date,title">
         <thead>
             <tr>
+                <th data-col="ID">ID</th>
                 <th data-col="path">Path</th>
                 <th data-col="name">Name</th>
                 <th data-col="title">Title</th>
