Menü Liste Objekt erstellt

--- a/_template.html
+++ b/_template.html
@@ -53,6 +53,11 @@
 <!-- INFO Listen -->
 <script type="module">
   import * as infolist from "/infolist/infolist.js";
+  
+  // Tabellen prüfen
   infolist.checkTables();
+
+  // Navigation prüfen
+  infolist.checkNav();
 </script>
 </html>
