Tabelle Navigation verbessert

--- a/_list.html
+++ b/_list.html
@@ -39,7 +39,7 @@
     <f-row color-p><p>Sites</p></f-row>
     <table id="lidoc_sites" data-ilist="lidoc/sites" data-sort="path,date,title">
         <thead>
-            <tr>
+            <tr pos-sticky style="top:0;">
                 <th data-col="ID">ID</th>
                 <th data-col="path">Path</th>
                 <th data-col="name">Name</th>
