--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="" />
     <link rel="icon" href="favicon.png">
-    <!-- <link rel="stylesheet" type="text/css" href="style.css" /> -->
+    <link rel="stylesheet" type="text/css" href="/flex/flex.css" />
+    <link rel="stylesheet" type="text/css" href="/flex/flex-colors.css" />
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <h1>Lade ...</h1>
 </body>
-<script id="lidoc" src="lidoc/lidoc.js"></script>
+<script id="lidoc" type="module" src="/lidoc/lidoc.js"></script>
 
 </html>
