Hash auslesen umgebaut (ohne /src/)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     const $$ = document.querySelectorAll.bind(document);
 
     showContent($("#header"), "/src/_header.md");
+    showContent($("#content"), "/src/index.md");
     showSite($("#content"));
 </script>
 
