--- a/index.html
+++ b/index.html
@@ -9,22 +9,73 @@
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="/flex/flex.css" />
     <link rel="stylesheet" type="text/css" href="/flex/flex-colors.css" />
+    <style>
+        #menue {
+            position: fixed;
+            width: 250px;
+            top: 50px;
+            bottom: 0px;
+            overflow-y: auto;
+            display: none;
+        }
+
+        .showmenue {
+            display: block !important;
+        }
+
+        .showmenue~#content,
+        .showmenue~#footer {
+            margin-left: 250px;
+        }
+
+        @media print {
+            #content {
+                margin-left: 0;
+            }
+        }
+    </style>
 </head>
 
 <body>
-    <div id="header" pos-t pos-sticky></div>
-    <div id="content"><h1>Lade ...</h1></div>
+    <div id="header" pos-t pos-sticky no-print></div>
+    <nav id="menue" color-s hide-s no-print class="">Menue</nav>
+    <div id="content" h-10>
+        <h1>Lade ...</h1>
+    </div>
+    <div id="footer" color-darkgrey h-1 no-print>Footer</div>
 </body>
 
 <script type="module">
-    import {showSite, showContent} from "./lidoc/lidoc.js";
+    import { showSite, showContent, setSublist } from "./lidoc/lidoc.js";
 
+    // Selectoren
     const $ = document.querySelector.bind(document);
     const $$ = document.querySelectorAll.bind(document);
 
-    showContent($("#header"), "/src/_header.md");
-    showContent($("#content"), "/src/index.md");
-    showSite($("#content"));
+    // Elemente lesen
+    const menueElm = $("#menue");
+
+    // Events
+    addEventListener("hashchange", (e) => {
+        menueElm.classList.add("showmenue");
+        showSite($("#content"));
+    });
+
+    // Header u. Footer laden
+    showContent($("#header"), "/doc/_header.md");
+    showContent($("#footer"), "/doc/_footer.md");
+
+    // Menue Anzeigen wenn Hash
+    if (window.location.hash?.length > 2) {
+        $("#menue").classList.add("showmenue");
+    }
+
+    // Menues laden und Seite anzeigen
+    showContent($("#menue"), "/doc/_menue.md").then(() => {
+        // [sub-list] Erstellen
+        setSublist();
+        showSite($("#content"));
+    });
 </script>
 
 </html>
