--- a/index.html
+++ b/index.html
@@ -3,50 +3,44 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Website</title>
+    <title>Godot Community DE</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="" />
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="/img/icon.png">
     <link rel="stylesheet" type="text/css" href="/flex/flex.css" />
     <link rel="stylesheet" type="text/css" href="/flex/flex-colors.css" />
+    <link rel="stylesheet" type="text/css" href="/prism/prism.css" />
     <style>
-        #menue {
-            position: fixed;
-            width: 250px;
-            top: 50px;
-            bottom: 0px;
-            overflow-y: auto;
-            display: none;
-        }
+        #menue {position: fixed; width: 300px; top:50px; bottom: 0px; overflow-y: auto; display: none;}
+        .showmenue { display: block !important;}
+        .showmenue ~ #content {margin-left: 350px; max-width: 796px;}
+        .showmenue ~ #footer {margin-left: 300px;}
 
-        .showmenue {
-            display: block !important;
-        }
+        a::before ~ ul ul {content: "+ ";}
+        /* ul ul{background-color: #5387BF;} */
 
-        .showmenue~#content,
-        .showmenue~#footer {
-            margin-left: 250px;
-        }
+        #content {min-height: 90vh;}
+        #footer {color: #fff !important;background-color: #222 !important}
+
 
         @media print {
-            #content {
-                margin-left: 0;
-            }
+            #content {margin-left: 0!important;}
+            #menue {display: none!important;}
         }
     </style>
+    
+    <script src="/prism/prism.js"></script>
 </head>
 
 <body>
     <div id="header" pos-t pos-sticky no-print></div>
-    <nav id="menue" color-s hide-s no-print class="">Menue</nav>
-    <div id="content" h-10>
-        <h1>Lade ...</h1>
-    </div>
-    <div id="footer" color-darkgrey h-1 no-print>Footer</div>
+    <nav id="menue" color-p2 hide-s no-print class="">Menue</nav>
+    <div id="content"><h1>Lade ...</h1></div>
+    <div id="footer" h-1 no-print>Footer</div>
 </body>
 
 <script type="module">
-    import { showSite, showContent, setSublist } from "./lidoc/lidoc.js";
+    import {showSite, showContent, setSublist} from "./lidoc/lidoc.js";
 
     // Selectoren
     const $ = document.querySelector.bind(document);
@@ -59,6 +53,7 @@
     addEventListener("hashchange", (e) => {
         menueElm.classList.add("showmenue");
         showSite($("#content"));
+        Prism.highlightAll();
     });
 
     // Header u. Footer laden
@@ -71,11 +66,12 @@
     }
 
     // Menues laden und Seite anzeigen
-    showContent($("#menue"), "/doc/_menue.md").then(() => {
+    showContent($("#menue"), "/doc/_menue.md").then(() =>{
         // [sub-list] Erstellen
         setSublist();
         showSite($("#content"));
     });
+
 </script>
 
 </html>
